package btree;

message BtreeMetaData
{
  optional int64 root = 1;
  optional int64 leaf_count = 2;
  optional int64 node_count = 3;
  optional int64 leaf_max = 4;
  optional int64 node_max = 5;
  optional int64 size = 6;
  optional int64 index_cursor = 7;
}
message NodeRecordMetaData
{
  optional int64 id = 1;
  repeated int64 childrens = 2;
  repeated bytes keys = 3;
  optional int32 is_dirt =4;
}
message LeafRecordMetaData
{
  optional int64 id = 1;
  repeated bytes keys = 2;
  repeated bytes values = 3;
  optional int32 is_dirt =4;
}
